--- a/style.css
+++ b/style.css
@@ -1,8 +1,17 @@
 h1{
     text-align: center;
+    margin: 0%;
 }
 .mypic{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+    float: left;
+    margin: 5px;
+    height: 150px;
+    width: auto;
 }
+
+
+
+.education{
+    clear: left;
+}
+
