--- a/style.css
+++ b/style.css
@@ -1,17 +1,16 @@
 h1{
     text-align: center;
-    margin: 0%;
+    margin: 0;
 }
 .mypic{
     float: left;
-    margin: 5px;
-    height: 150px;
+    margin: 5;
+    height: 150;
     width: auto;
 }
-
-
 
 .education{
     clear: left;
 }
+
 
