--- a/style.css
+++ b/style.css
@@ -1,16 +1,15 @@
 h1{
     text-align: center;
-    margin: 0;
+    margin: 0%;
 }
 .mypic{
     float: left;
-    margin: 5;
-    height: 150;
+    margin: 5px;
+    height: 150px;
     width: auto;
 }
 
 .education{
     clear: left;
 }
-
 
