--- a/style.css
+++ b/style.css
@@ -6,11 +6,12 @@ h1{
     float: left;
     margin: 5px;
     height: auto;
-    width: auto;
+    width: 200px;
 }
 
 .education{
     clear: left;
 }
+
 
 
